style/home.css
#page-contents, #footer {
	margin-right: 0;
}

#intro {
	background: #eee;
	border: 1px solid #ccc;
	margin: 2em auto;
	padding: 10px;
	-webkit-border-radius: 20px;
	moz-border-radius: 20px;
	border-radius: 20px;
	width: 850px;
}

#intro-wrap {
	float: right;
	width: 380px;
	margin: 10px;
	background: #eee;
}

#intro-logo {
	background: url('img/logointro.png') no-repeat;
	width: 380px;
	height: 65px;
}

#slideshow {
	height: 300px;
	margin-right: 400px;
	width: 450px;
}

#slides {
	list-style:none;
	margin: 0;
	padding: 0;
}

#slides img {
	cursor: pointer;
}

#tinybox {
	position: absolute;
	display: none;
	padding: 0;
	border: 10px solid #eee;
	z-index: 2000;
}

#tinymask {
	position: absolute;
	display: none;
	top: 0;
	left: 0;
	height:100%;
	width: 100%;
	background: #000;
	z-index: 1500;
}

#tinycontent {
	background: #fff;
}

